deploy/retrieveUnpackaged/objects/Deal_Justifier__c.object
<CustomObject>
    <description>Used to provide additional data when EVA is below a &quot;C&quot;.</description>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <formula>Opportunity_Name__r.Contract_Length__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EVA_Grade__c</fullName>
        <inlineHelpText>Enter EVA Grade</inlineHelpText>
        <label>EVA Grade</label>
        <picklist>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MRR__c</fullName>
        <formula>Opportunity_Name__r.New_MRR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <inlineHelpText>Copy and Paste the Opportunity name here.</inlineHelpText>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deal Justifier</relationshipLabel>
        <relationshipName>R00N500000021dYVEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <formula>Opportunity_Name__r.Points__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_for_approval__c</fullName>
        <label>Reason for approval?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Return_for_discount__c</fullName>
        <inlineHelpText>What can we get in return for the discount?</inlineHelpText>
        <label>Return for discount?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_does_the_company_do__c</fullName>
        <label>What does the company do?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_is_this_project_for__c</fullName>
        <label>What is this project for?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>When_will_the_HSA_be_returned__c</fullName>
        <inlineHelpText>If we approve the deal, when will the HSA be returned?</inlineHelpText>
        <label>When will the HSA be returned?</label>
        <type>Date</type>
    </fields>
    <label>Deal Justifier</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DJ-{0000}</displayFormat>
        <label>Deal Justifier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Justifier</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>